cloud/operator/hack/manifests/liferay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dxpsim
    namespace: __LIFERAY_NAMESPACE__
spec:
    replicas: 1
    selector:
        matchLabels:
            app: dxpsim
    template:
        metadata:
            labels:
                app: dxpsim
        spec:
            containers:
                -   env:
                        -   name: NAMESPACE
                            value: __LIFERAY_NAMESPACE__
                        -   name: VIRTUAL_INSTANCE_IDS
                            value: __VIRTUAL_INSTANCE_ID__
                        -   name: VIRTUAL_HOST
                            value: localhost
                    image: __DXPSIM_IMAGE__
                    imagePullPolicy: Never
                    name: dxpsim
                    resources:
                        limits:
                            cpu: 200m
                            memory: 128Mi
                        requests:
                            cpu: 50m
                            memory: 64Mi
            serviceAccountName: dxpsim
